# dqn-reconstruction

./: .bootstrap-complete  .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/hooks/: hooks.md
.claude/skills/: code-review.md  documentation.md  entry-protocol.md  qa-checklist.md  refactor-playbook.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
docs/: architecture.md  evidence-ledger.md  implementation-plan.md  reconstruction-notes.md
docs/adr/: ADR-001-template.md  ADR-002-reconstruction-assumptions.md
docs/qa/: qa-plan.md
docs/runbooks/: operations.md
results/: comparison_summary.md  optimized_results.json  paper_reported_metrics.md  verification_results.json
scripts/: download_market_data.py  run_optimized.py  run_verification.py
src/: agent.py  config.py  data.py  env.py  evaluate.py  network.py  replay_buffer.py  train.py  utils.py
tests/: conftest.py
tests/fixtures/: sample_ohlcv.csv
tests/integration/: test_evaluate.py  test_smoke.py  test_training_loop.py
tests/unit/: test_agent.py  test_data.py  test_env.py  test_network.py  test_replay_buffer.py  test_utils.py
